# high-order-layers-torch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  Pipfile  README.md  cifar10.py  cifar100.py  functionExample.py  function_example.py  invariant_mnist.py  mnist.py  pyproject.toml  pyramid.py  requirements.txt  setup.cfg  setup.py  test.py  util.py  xor.py
.github/workflows/: python-app.yml
config/: autoencoder.yaml  block_mnist.yaml  cifar100_config.yaml  function.yaml  invariant_mnist.yaml  mnist_config.yaml  variational_autoencoder.yaml  xor.yaml
config/net/: high_order_conv.yaml  high_order_mlp.yaml
config/optimizer/: adahessian.yaml  adam.yaml  lion.yaml  sophia.yaml
examples/: autoencoder.py  block_mnist.py  cifar10.py  cifar100.py  function_example.py  invariant_mnist.py  mnist.py  pyramid.py  variational_autoencoder.py  xor.py
functional_layers/: Basis.py  FunctionalConvolution.py  LagrangePolynomial.py  PolynomialLayers.py
high_order_layers_torch/: Basis.py  FunctionalConvolution.py  FunctionalConvolutionTranspose.py  LagrangePolynomial.py  PerturbationLayer.py  PolynomialLayers.py  ProductLayer.py  attentions.py  layers.py  modules.py  networks.py  positional_embeddings.py  utils.py
high_order_layers_torch/sparse_optimizers/: __init__.py  sparse_lion.py
scripts/: invariant_mnist.sh
tests/: test_convolution.py  test_convolution_transpose.py  test_embeddings.py  test_examples.py  test_layers.py  test_mlp.py  test_networks.py  test_refinement.py  test_sparse_optimizer.py  test_utils.py
