[tool.poetry]
name = "high-order-layers-torch"
version = "1.3.3"
description = "High order layers in pytorch"
authors = ["jloverich <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
torch-optimizer = "^0.3.0"
hydra-core = "^1.2.0"
torchmetrics = "^0.10.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.3"
black = "^22.3.0"
lightning-bolts = "^0.5.0"
pytest = "^7.1.2"
matplotlib = "^3.5.2"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pylint = "^2.15.5"
tensorboard = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
